2006-03-17  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: David Reveman

	* INSTALL:
	Mention startup-notification requirement.

2006-03-17  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Add opacity option.

	* configure.ac: Bump version to 0.0.7.

2006-03-17  Radek Doulik  <rodo@novell.com>

	* src/session.c: added all mandatory SM client callbacks, handle
	ICE connection and process ICE messages

	* src/display.c (compAddWatchFd): new function, adds new fd watch
	- for poll io multiplexing
	(compRemoveWatchFd): new function, remove fd watch added by
	compAddWatchFd
	(doPoll): new helper function, does call poll and calls callbacks
	for watch fd's. returns the value of poll call
	(eventLoop): use doPoll, we use NULL for display fd watch so that
	it doesn't call anything and just use return value from poll as
	before

2006-03-17  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchDamageWindowRect): Update window
	attributes for popup window. We never get a MapRequest for this
	window so it most be done here.
	Add "bring to front" option. (Greg)

	* src/window.c (stackAncestors): Never raise desktop windows.
	Made restackWindowAbove and restackWindowBelow smarter.

2006-03-16  David Reveman  <davidr@novell.com>

	* plugins/minimize.c:
	* src/event.c (handleEvent):
	* src/window.c:
	Handle window state changes correctly.
	(maximizeWindow): Use actions to determine if we're allowed maximize
	window.

	* src/event.c (handleEvent):
	* src/window.c: Send configure notifies correctly.

2006-03-15  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchPaintWindow): Fix paint attribute
	calculations.

	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/window.c: Add restackWindowBelow.

2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Opacity, brightness and saturation as adjustable
	options. (Greg)

	* src/window.c (syncWindowPosition): Move frame window now instead of